--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,8 @@
     <string name="_0_tip_per_person">$0 tip per person</string>
     <string name="calculate">Calculate</string>
     <string name="custom_percentage">Custom Percentage</string>
-    <string name="new_total_bill_0">New Total Bill:$0</string>
-
-
+    <string name="new_total_bill_0">$0 New Total Bill</string>
+    <string name="custom">Custom</string>
+    <string name="tip_hint">Tip %</string>
+    <string name="tip_0">$0 Tip</string>
 </resources>
