--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Test Project</string>
-    <string name="title">Tip Calculator</string>
+    <string name="title">TipMe</string>
     <string name="Content_tip_jar">Tip jar</string>
     <string name="single_person">Single Person</string>
     <string name="split_bill">Split Bill</string>
